--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "json-server": "^0.16.2",
     "phaser": "^3.24.1"
   }
 }
