--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "json-server": "^0.16.2",
+    "node-fetch": "^2.6.1",
     "phaser": "^3.24.1"
   }
 }
